# bodr

./: README.md
bodr/: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  THANKS  TODO  acinclude.m4  autogen.sh  bodr.pc.in  configure.ac
bodr/bibtexml-xslt/: Makefile.am  extended.xsl  harvard-helper.xsl  html-common.xsl  html-harvard.xsl
bodr/crystal/: Makefile.am  space-groups.bibxml  space-groups.xml
bodr/dicts/: Makefile.am  blueobelisk-dictionary.xml  siUnitsDict.xml  unitsDict.xml
bodr/elements/: Makefile.am  acidicbehaviour.txt  basic.xsl  blocks.txt  boilingpoint.txt  colors.txt  crystalstructures.txt  crystalstructures.xml  dates.bibxml  dates.txt  density.txt  discovery_countries.txt  electron-affinity.bibxml  electron-affinity.txt  electroneg-pauling.bibxml  electronic-configuration.bibxml  electronic-configuration.txt  elements.xml  exact-masses.bibxml  exact-masses.txt  family.txt  groups.txt  ionization.bibxml  ionization.txt  mass.bibxml  mass.txt  meltingpoint.bibxml  meltingpoint.txt  nameorigin.bibxml  nameorigin.txt  names.bibxml  names.txt  owl2xhtml.xsl  periods.txt  radii-covalent.bibxml  radii-covalent.txt  radii-vdw.bibxml  symbols.bibxml  symbols.txt
bodr/isotopes/: Makefile.am  abundances.txt  decay.txt  halflife.txt  isotopes.bibxml  isotopes.txt  isotopes.xml  magmoment.txt  spin.txt
bodr/schemas/: Makefile.am  bibtexml.xsd  cml23.xsd  cml25.xsd  dictionary.schematron  elements.schematron  isotopes.schematron
bodr/scripts/: Makefile.am  babel-elements.pl  crystalstructure.rb  dumper.pl  elements.pl  isotopes.pl  tidy.pl
bodr/tests/: AtWt.xsl  Makefile.am
